<resources>
    <string name="app_name">Quick Tasks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_tasks">Tasks</string>
    <string name="menu_add_task">Add Task</string>
    <string name="menu_preview_task">Preview Tasks</string>
    <string name="menu_update_task">Update Tasks</string>
    <string name="menu_news">News</string>
    <string name="menu_user_profile">Profile</string>

    <!-- Task Strings Start -->

    <string name="task_tile">Task Title</string>
    <string name="task_description">Description</string>
    <string name="task_priority">Priority</string>

    <string-array name="select_priority">
        <item>None</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string name="task_dueDate">Due Date</string>
    <string name="task_status">Status</string>

    <string-array name="select_status">
        <item>None</item>
        <item>To Do</item>
        <item>In Progress</item>
        <item>Pending</item>
        <item>Completed</item>
        <item>On Hold</item>
        <item>Cancelled</item>
    </string-array>

    <string name="task_save_Btn">Save Button</string>

    <!-- Task Strings End -->


    <!-- News Strings Start -->

    <string name="select_api">Select Api</string>

    <string name="select_parameter">Select Parameter</string>

    <string-array name="select_apiCall">
        <item>Select Api</item>
        <item>everything</item>
        <item>top-headlines</item>
    </string-array>


    <string-array name="select_parameter1">
        <item>Select Parameter</item>
        <item>apple</item>
        <item>tesla</item>
        <item>wsj.com</item>
    </string-array>

    <string-array name="select_parameter2">
        <item>Select</item>
        <item>country</item>
        <item>sources</item>
    </string-array>

    <!-- News Strings End -->

</resources>