<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tasks">

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.btf.quick_tasks.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.btf.quick_tasks.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.btf.quick_tasks.ui.profile.ProfileFragment"
        android:label="@string/menu_user_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.btf.quick_tasks.ui.tasks.AddEditTaskFragment"
        android:label="@string/menu_add_task"
        tools:layout="@layout/fragment_add_tasks" />

    <fragment
        android:id="@+id/previewTaskFragment"
        android:name="com.btf.quick_tasks.ui.tasks.PreviewTaskFragment"
        android:label="@string/menu_preview_task"
        tools:layout="@layout/fragment_preview_tasks" />
</navigation>